--- a/WineCore/cellar/CrimsonDisk/app.html
+++ b/WineCore/cellar/CrimsonDisk/app.html
@@ -18,14 +18,22 @@
 
   <script src="main.js"></script>
 
+  <script id="template-nav" type="text/x-handlers-template">
+    <ul class="nav nav-tabs">
+      <li class="active"><a class='search'>Search</a></li>
+      <li><a class='cellar'>Cellar</a></li>
+    </ul>
+  </script>
+
   <script id="template-main" type="text/x-handlebars-template">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default" role="navigation">
       <div id="searchbar">
       </div>
     </nav>
-    <div style="height:60px"> </div>
+    <div class='container'>
     <ul id="searchresults" class="list-group">
     </ul>
+    </div>
   </script>
 
   <script id="template-search" type="text/x-handlebars-template">
@@ -49,7 +57,28 @@
   <script id="template-winery" type="text/x-handlebars-template">
     <h4>{{name}}</h4>
     <div class='location'>{{location}}</div>
+  </script>
+  
+  <script id="template-wine-detail" type="text/x-handlebars-template">
+    <div class="container">
+      <h2> 
+        <span class='winery'>{{winery}}</span>
+        <span class='year'>{{year}}</span>
+        <span class='name'>{{name}}</span>
+      </h2>
     
+      <button type="button" class="add btn btn-default">Add This Wine to My Cellar</button>
+
+      <table class="table table-striped">
+        <tr> <th>Winery</th> <td><a class='winery'>{{winery}}</a></td> </tr>
+        <tr> <th>Year</th> <td>{{year}}</td> </tr>
+        <tr> <th>Name</th> <td>{{name}}</td> </tr> 
+        <tr> <th>Type</th> <td>{{winetype}}</td> </tr>
+        <tr> <th>Varietal</th> <td>{{varietal}}</td> </tr>
+        <tr> <th>UPC</th> <td>{{upc}}</td> </tr> 
+      </table>
+
+    </div>
   </script>
 
   <!--[if lt IE 9]>
@@ -58,7 +87,9 @@
 </head>
 
 <body>
-  <div id="wineapp" class="container">
+  <div id="nav">
+  </div>
+  <div id="mainwindow">
   </div>
 </body>
 </html>
