CrimsonDisk: winery now has winelist

--- a/WineCore/cellar/CrimsonDisk/app.html
+++ b/WineCore/cellar/CrimsonDisk/app.html
@@ -65,8 +65,9 @@
       <h2>
         <span class='name'>{{name}}</span>
       </h2>
-    
       <p> {{location}} </p> 
+      <ul id="winelist" class="list-group">
+      </ul>
     </div>
   </script>
 
