--- a/WineCore/cellar/CrimsonDisk/app.html
+++ b/WineCore/cellar/CrimsonDisk/app.html
@@ -15,8 +15,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
-
-  <script src="main.js"></script>
+  <script data-main="scripts/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.min.js"></script> 
 
   <script id="template-nav" type="text/x-handlers-template">
     <ul class="nav nav-tabs">
